apps/services/media/example3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
        - image: nginx
          name: guestbook-ui
          ports:
            - containerPort: 80
