apps/services/media/example3/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.vulf.haus`)
      kind: Rule
      services:
        - name: example3-guestbook-ui
          port: 80

  tls:
    secretName: cm-staging-shared-wildcard-vulfhaus-tls
